# wicher-server

./: .gitignore  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bootstrap  buildconfig.h.in  configure  configure.ac
cli/: Makefile.am  Makefile.in  main.c
include/: AccountsManager.h  AuthDB.h  Config.h  Connection.h  ConnectionLogger.h  ConnectionManager.h  DBman.h  DatabaseManager.h  JSONDatabase.h  Main.h  MainOptions.h  MessageParser.h  Toolkit.h  UID.h  control.h  main.h  networking.h
include/spdlog/: tweakme.h
m4/: ax_boost_base.m4
src/: AccountsManager.cpp  AuthDB.cpp  Config.cpp  Connection.cpp  ConnectionLogger.cpp  ConnectionManager.cpp  DBman.cpp  DBmanPerformer.cpp  DatabaseCreator.cpp  DatabaseDropper.cpp  DatabaseGetter.cpp  DatabaseHelper.cpp  DatabaseManager.cpp  DatabaseUpdater.cpp  Main.cpp  MainOptions.cpp  Makefile.am  Makefile.in  MessageParser.cpp  Toolkit.cpp  UID.cpp  _main.cpp  control.cpp  main.cpp  main_socket_utils.cpp  main_thread_utils.cpp  networking.cpp
src/JSONDatabase/: DatabaseCreator.cpp  DatabaseDropper.cpp  DatabaseGetter.cpp  DatabaseHelper.cpp  DatabaseManager.cpp  DatabaseUpdater.cpp
